# CoDriver

./: +  .gitignore  .graphifyignore  AGENTS.md  AuthKey_YB38K6C334.p8  CONTEXT.md  LICENSE  README.md  codriver-update.json  com.rickydaneperlick.CoDriver.json  package-lock.json  package.json
.agents/workflows/: graphify.md
.github/: FUNDING.yml
.github/workflows/: deploy-website.yml  main.yml  tag.yml
.zed/: debug.json
arch/: README.md  context.md
arch/api/: contracts.md  sequences.md
arch/components/: file-operations.md  relationships.md
arch/data/: flows.md  models.md
arch/diagrams/: architecture.md  flow.md  sequence.md
docs/: kofi_terms.md  macos-signing-notarization.md  release-notes-0.7.6.md
docs/copy-move-conflict-handling/: commit-message.md  release-notes.md
docs/current-version-release/: release-notes.md
graphify-out/: .graphify_incremental.json  .graphify_labels.json  .graphify_old.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-05-25/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26/: manifest.json
graphify-out/2026-05-26_10/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_11/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_12/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_2/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_3/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_4/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_5/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_6/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_7/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_8/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-26_9/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_10/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_11/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_12/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_13/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_14/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_15/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_2/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_3/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_4/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_5/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_6/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_7/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_8/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-27_9/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_10/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_11/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_12/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_13/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_14/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_15/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_16/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_17/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_18/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_19/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_2/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_20/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_21/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_3/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_4/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_5/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-28_6/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
memories/: project_context.md
scratch/: test_prompt.rs
snap/: snapcraft.yaml
src-tauri/: Cargo.toml  Info.plist  functions.c  rustc-ice-2025-10-31T13_52_26-22201.txt  rustc-ice-2025-11-02T17_16_21-68679.txt  rustc-ice-2025-11-02T17_16_30-68926.txt  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/resources/rdpFX.dmgcanvas/: Disk Image
src-tauri/src/: applications.rs  main.rs  utils.rs  window_tauri_ext.rs
src-tauri/src/remote/: ftp.rs  mod.rs
src-tauri/src/remote/ftp/: ftp_discovery.rs
src-tauri/tauri-assets/: contextmenu.js  index.html  main_logic.js  style.css
themes/: Dark.json  Default.json  Hacker.json  Light.json
ui/: ._main_logic.js  DialogService.ts  compressImage.js  contextmenu.js  events.js  file-upload.php  file_extensions.js  index.html  jquery-dragout.js  main_logic.js  models.js  popup-system.js  style.css  test.html  utils.js  worker.js
ui/js-gc/: gp.js  (+7 more)
website/: app.js  index.html  style.css
(+113 files in other folders)
