# cargo-features = ["profile-rustflags"]
[package]
name = "app"
version = "0.4.4"
description = "A simple file explorer"
authors = ["Ricky Dane Perlick"]
license = "none"
repository = "https://github.com/RickyDane/rdpfx"
default-run = "app"
edition = "2021"
rust-version = "1.73"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
chrono = "0.4.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
    "http-all",
    "os-all",
    "macos-private-api",
    "cli",
    "clipboard-all",
    "protocol-all",
    "path-all",
    "window-all",
    "dialog-all",
    "fs-all",
] }
open = "5.0.0"
rust_search = "2.1.0"
stopwatch = "0.0.7"
base64 = "0.21.2"
zip-extensions = "0.6.1"
rar = "0.2.0"
sevenz-rust = "0.5.2"
dialog = "0.3.0"
copy_dir = "0.1.3"
unrar = "0.5.1"
dateparser = "0.2.0"
async-std = "1.10.0"
sysinfo = "0.30.5"
color-print = "0.3.5"
fs_extra = "1.3.0"
rayon = "1.8.1"
flate2 = "1.0.28"
zip = "0.6.6"
gif = "0.13.1"
tauri-plugin-drag = "0.3.0"
walkdir = "2.4.0"
ini = "1.3.0"
window-shadows = "0.2.2"
substring = "1.4.5"
tar = "0.4.40"
archiver-rs = "0.5.1"
regex = "1.10.3"
thread_local = "1.1.8"
mio = "0.8.11"
lazy_static = "1.4.0"
suppaftp = { version = "=5.3.1", features = ["async"] }
tokio = "1.37.0"
widestring = "1.1.0"
windows = { version = "0.56.0", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[profile.dev]
# rustflags = ["-Z", "threads=3"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
